# bevy_gltf_animator_helper

./: .gitignore  Cargo.toml  LICENSE  Readme.md
examples/: basic.rs  simple.rs
examples/assets/: bv.glb  m2.glb  m3.glb  readme.txt
src/: lib.rs
