[package]
name = "bevy_gltf_animator_helper"
version = "0.1.0"
edition = "2021"
authors = ["xenon615"]
keywords = ["gamedev", "bevy", "animation"]
categories = ["game-development"]


[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
# opt-level = 'z' # wasm less size 

[dev-dependencies.bevy]
version = "0.15.3"
default-features = false
features = [
"animation",	
"bevy_animation",	
"bevy_core_pipeline",	
"bevy_gltf",	
"bevy_pbr",	
"bevy_render",	
"bevy_scene",	
"bevy_state",
"bevy_window",
"bevy_winit",
"hdr",
"multi_threaded",
"png",	
"jpeg",
 "dynamic_linking", 
]

[dependencies.bevy]
version = "0.15"
default-features = false
features = [
"animation",
"bevy_animation",
"multi_threaded",
]

[[example]]
name = "basic" 



