[package]
name = "bevy_gltf_animator_helper"
version = "0.2.0"
edition = "2024"
authors = ["xenon615"]
keywords = ["gamedev", "bevy", "animation"]
categories = ["game-development"]


[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
# opt-level = 'z' # wasm less size 

[dev-dependencies.bevy]
version = "0.16.0"
# default-features = true
default-features = false
features = [
    "bevy_core_pipeline",	
    "bevy_gltf",	
    "bevy_pbr",	
    "bevy_render",	
    "bevy_window",
    "bevy_winit",
    "multi_threaded",
    "dynamic_linking", 
    "std", 
    "async_executor",
]

[dependencies.bevy]
version = "0.16.0"
default-features = false
features = [
    "bevy_gltf",
    "animation",
    "multi_threaded",
    "std", 
    "async_executor" 
]

[[example]]
name = "basic" 



