[package]
name = "bevy_gltf_animator_helper"
version = "0.4.0"
edition = "2024"
authors = ["xenon615"]
keywords = ["gamedev", "bevy", "animation"]
categories = ["game-development"]


[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
# opt-level = 'z' # wasm less size 

# [dev-dependencies.bevy]
# version = "0.18.0"
# # default-features = true
# default-features = false
# features = [
#     "bevy_core_pipeline",	
#     "bevy_gltf",	
#     "bevy_pbr",	
#     "bevy_render",	
#     "bevy_window",
#     "bevy_winit",
#     "multi_threaded",
#     "dynamic_linking", 
#     "std", 
#     "async_executor",
#     "reflect_auto_register"

# ]

[dev-dependencies.bevy]
version = "0.18.0"
default-features = false
features = ["dev", "3d"]



[dependencies.bevy]
version = "0.18.0"
default-features = false
features = [
    "gltf_animation",
]

[[example]]
name = "basic" 



